# agent-directory-zome

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json  rustfmt.toml
.github/workflows/: main.yml  release.yml
crates/agent_directory/: Cargo.toml
crates/agent_directory/src/: init.rs  lib.rs  paths.rs  zfns.rs
crates/agent_directory_integrity/: Cargo.toml
crates/agent_directory_integrity/src/: lib.rs  validation.rs
playground/webapp/: index.html  package.json  rollup.config.js  tsconfig.json  vite.config.ts  web-dev-server.config.mjs  web-server.config.mjs
playground/webapp/src/: agent_directory.dvm.ts  app.ts
playground/workdir/: dna.yaml  happ.yaml
scripts/: clean-npm.sh  clean.sh  install-hc-tools.sh  pack-happ.sh  ts-bindings.sh
webcomponents/: README.md  package.json
webcomponents/src/: agent_directory.bridge.ts  agent_directory.dvm.ts  agent_directory.proxy.ts  agent_directory.vm.ts  agent_directory.zvm.ts  index.ts
webcomponents/src/bindings/: agent_directory.fn.ts  agent_directory.integrity.ts  agent_directory.proxy.ts  agent_directory.types.ts
webcomponents/src/elements/: agent-directory-list.ts
